# PvZ-Animation-Monitor

./: CMakeLists.txt  CMakePresets.json  LICENSE  manifest.xml
inc/: mainWindow.h  monitor.h  process.h  util.h
src/: main.cpp  mainWindow.cpp  monitor.cpp  process.cpp
